--- a/src/_data/links.yaml
+++ b/src/_data/links.yaml
@@ -1,2 +1,3 @@
 - title: Customer Feedback Workflow AI
   url: https://chat.openai.com/share/56cb1b41-7a6d-4262-9ab1-ca7aa2a8fe14
+  tags: ["workflow"]
